--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -1,4 +1,6 @@
-﻿@model book_a_reading_room_visit.web.Models.AvailabilityViewModel
+﻿@using book_a_reading_room_visit.domain
+@using book_a_reading_room_visit.web.Helper
+@model book_a_reading_room_visit.web.Models.AvailabilityViewModel
 @{
     ViewData["Title"] = "Visit availability";
 }
@@ -26,7 +28,7 @@
         <section>
             <div class="row">
                 <div class="col-md-4 col-sm-4">
-                    @if (Model.OrderType == OrderType.StandardOrderVisit)
+                    @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                     {
                         <h2>Standard visit availability</h2>
                     }
@@ -41,9 +43,9 @@
 
         <section>
             <div class="row">
-                @if (Model.OrderType == OrderType.StandardOrderVisit)
+                @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                 {
-                    <form id="visit-customisation-form" action="@Url.Action("Availability", "Home", new { orderType = @Model.OrderType.ToStringURL() })" method="POST">
+                    <form id="visit-customisation-form" action="@Url.Action("Availability", "Home", new { bookingType = @Model.BookingType.ToStringURL() })" method="POST">
                         @Html.AntiForgeryToken()
                         <div class="col-md-4 col-sm-4">
                             <section id="room-selection">
@@ -52,12 +54,12 @@
 
                                     <div>
                                         <label for="standard-room">Standard reading room</label>
-                                        @Html.RadioButtonFor(Model => Model.RoomType, RoomType.StandardReadingRoom, new { id = "standard-room" })
+                                        @Html.RadioButtonFor(Model => Model.SeatType, SeatTypes.StdRRSeat, new { id = "standard-room" })
                                     </div>
 
                                     <div>
                                         <label for="map-and-lg-room">Map and large document reading room</label>
-                                        @Html.RadioButtonFor(Model => Model.RoomType, RoomType.MapAndLargeDocumentReadingRoom, new { id = "map-and-lg-room" })
+                                        @Html.RadioButtonFor(Model => Model.SeatType, SeatTypes.MandLRR, new { id = "map-and-lg-room" })
                                     </div>
                                 </fieldset>
                             </section>
@@ -72,9 +74,9 @@
                             @for (var index = 0; index < Model.AvailableBookings.Count; index++)
                             {
                                 <li class="date">
-                                    <form action="@Url.Action("SecureBooking", "Booking", new { orderType = @Model.OrderType.ToStringURL() })" method="POST">
+                                    <form action="@Url.Action("SecureBooking", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="POST">
                                         @Html.AntiForgeryToken()
-                                        @Html.HiddenFor(Model => Model.RoomType)
+                                        @Html.HiddenFor(Model => Model.SeatType)
                                         @Html.Hidden("bookingDate", Model.AvailableBookings[index].Date)
                                         <button class="button" type="submit">
                                             <span class="col-md-6">@Model.AvailableBookings[index].ToDate</span>
