--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                                 <li>Computer access available</li>
                             </ul>
 
-                            <a class="button primary" href="@Url.Action("Availability", "Home", new { orderType = "standard-order-visit" })">Select a date</a>
+                            <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = "standard-order-visit" })">Select a date</a>
                         </div>
                     </div>
                 </section>
@@ -67,7 +67,7 @@
                                 <li>Computer access available</li>
                             </ul>
 
-                            <a class="button primary" href="@Url.Action("Availability", "Home", new { orderType = "bulk-order-visit" })">Select a date</a>
+                            <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = "bulk-order-visit" })">Select a date</a>
                         </div>
                     </div>
                 </section>
