--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿@using book_a_reading_room_visit.web.Models;
+﻿@using book_a_reading_room_visit.web.Helper
+@using book_a_reading_room_visit.web.Models;
 @{
     ViewData["Title"] = "Booking confirmation";
 }
@@ -57,7 +58,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <span class="col-md-6">
-                        <a class="button primary" href="@Url.Action("OrderDocuments", "DocumentOrder", new { orderType = @Model.OrderType.ToStringURL() } )">Continue booking now</a>
+                        <a class="button primary" href="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL() } )">Continue booking now</a>
                     </span>
 
                     <span class="col-md-6">
