--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -1,4 +1,6 @@
-﻿@using book_a_reading_room_visit.web.Models
+﻿@using book_a_reading_room_visit.web.Helper
+@using book_a_reading_room_visit.web.Models
+@using book_a_reading_room_visit.domain
 @model BookingViewModel
 
 @{
@@ -32,11 +34,11 @@
         <section class="prompt-grey">
             <div class="row">
                 <div class="booking-summary">
-                    <p>@(Model.OrderType == OrderType.StandardOrderVisit ? "Standard order" : "Bulk order") - @($"{Model.BookingDate:dddd dd MMMM}")</p>
+                    <p>@(Model.BookingType == BookingTypes.StandardOrderVisit ? "Standard order" : "Bulk order") - @($"{Model.BookingStartDate:dddd dd MMMM}")</p>
 
-                    @if (Model.OrderType == OrderType.StandardOrderVisit)
+                    @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                     {
-                        if (Model.RoomType == RoomType.StandardReadingRoom)
+                        if (Model.SeatType == SeatTypes.StdRRSeat)
                         {
                             <p>Standard document reading room</p>
                         }
@@ -71,7 +73,7 @@
         <section class="booking-options">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <form action="@Url.Action("BookingConfirmation", "Booking", new { orderType = @Model.OrderType.ToStringURL() })">
+                    <form action="@Url.Action("BookingConfirmation", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })">
                         <fieldset id="conditions">
                             <legend class="sr-only">Please accept the following conditions to continue with your order</legend>
 
@@ -86,7 +88,7 @@
                         </fieldset>
 
                         <span class="col-md-6">
-                            <a class="button primary" href="@Url.Action("Availability", "Home", new { orderType = @Model.OrderType.ToStringURL() } )">Back</a>
+                            <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = @Model.BookingType.ToStringURL() } )">Back</a>
                         </span>
 
                         <span class="col-md-6">
