updated the cshtml changes

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -1,5 +1,6 @@
-﻿@using book_a_reading_room_visit.web.Helper
-@using book_a_reading_room_visit.web.Models;
+﻿@using book_a_reading_room_visit.domain
+@using book_a_reading_room_visit.web.Helper
+@using book_a_reading_room_visit.web.Models
 @{
     ViewData["Title"] = "Booking confirmation";
 }
