--- a/book-a-reading-room-visit.web/Views/DocumentOrder/DocumentOrder.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/DocumentOrder.cshtml
@@ -1,4 +1,6 @@
-﻿@using book_a_reading_room_visit.web.Models;
+﻿@using book_a_reading_room_visit.domain
+@using book_a_reading_room_visit.web.Helper
+@using book_a_reading_room_visit.web.Models
 @{
     ViewData["Title"] = "Manage document order";
 }
@@ -38,7 +40,7 @@
 
                         <div class="col-md-6 col-xs-12 col-md-offset-3 no-float">
                             <span class="col-md-6 col-xs-12 no-float">
-                                <a href="@Url.Action("OrderDocuments", "DocumentOrder", new { orderType = @Model.OrderType.ToStringURL() } )">Edit your order</a>
+                                <a href="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL() } )">Edit your order</a>
                             </span>
                             <span class="col-md-6 col-xs-12 no-float">
                                 <a href="#">Print your order</a>
@@ -102,7 +104,7 @@
                     </ol>
                 </div>
 
-                @if (Model.OrderType == OrderType.StandardOrderVisit)
+                @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                 {
                     <div class="col-md-6">
                         <h3>Your reserve documents</h3>
