--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -74,7 +74,16 @@
                     </div>
                 </section>
             </div>
+        </section>
 
+        <section class="prompt">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Return to your booking</h3>
+                    <p>You can view you order details for an existing visit using your booking reference number</p>
+                    <a href="@Url.Action("ReturnToBooking", "Home")">Find your existing visit</a>
+                </div>
+            </div>
         </section>
     </section>
 </div>
