Link to cancel booking page

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/DocumentOrder.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/DocumentOrder.cshtml
@@ -71,7 +71,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="/">Cancel this booking ></a>
+                    <a href="@Url.Action("CancelBooking", "Booking")">Cancel this booking ></a>
                 </div>
             </div>
         </section>
