--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -68,7 +68,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="#">Cancel this booking ></a>
+                    <a href="@Url.Action("CancelBooking", "Booking")">Cancel this booking ></a>
                 </div>
             </div>
         </section>
