--- a/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using book_a_reading_room_visit.domain
+@using book_a_reading_room_visit.web.Helper
+@using book_a_reading_room_visit.web.Models
+
+@{
     ViewData["Title"] = "Cancel your visit";
 }
 
@@ -27,7 +31,7 @@
                             <legend>Are you sure you want to cancel your visit for Monday 30 March 2021?</legend>
 
                             <span class="col-md-4 col-sm-6 no-left-padding">
-                                <a class="button primary" href="@Url.Action("OrderDocuments", "OrderDocuments", "standard-order-visit" )">No - take me to the order form</a>
+                                <a class="button primary" href="#">No - take me to the order form</a>
                             </span>
 
                             <span class="col-md-4 col-sm-6 no-left-padding">
