--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -28,7 +28,7 @@
 
         <section>
             <div class="row">
-                <section id="room-selection">
+                <section id="room-selection" class="align-left">
                     <div class="col-md-4 col-sm-4">
                         @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                         {
@@ -42,7 +42,7 @@
 
                         @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                         {
-                            <form id="room-selection-form" class="align-left" action="@Url.Action("Availability", "Home", new { bookingType = @Model.BookingType.ToStringURL() })" method="POST">
+                            <form id="room-selection-form" action="@Url.Action("Availability", "Home", new { bookingType = @Model.BookingType.ToStringURL() })" method="POST">
                                 @Html.AntiForgeryToken()
                                 <fieldset>
                                     <legend class="sr-only">Select reading room</legend>
@@ -61,7 +61,26 @@
                                 <button class="button" type="submit">Update</button>
                             </form>
                         }
+
+                        <div class="prompt-white">
+                            <p class="no-margin">
+                                Camera stands are now provided for all seats in our reading rooms
+                            </p>
+                        </div>
+
+                        <div class="visit-toggler">
+                            @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                            {
+                                <a href="/bulk-order-visit/availability">Bulk visit availability ></a>
+                            }
+
+                            else
+                            {
+                                <a href="/standard-order-visit/availability">Standard visit availability ></a>
+                            }
+                        </div>
                     </div>
+
                 </section>
 
                 <section id="date-selection">
