--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -274,6 +274,10 @@ form {
     }
 }
 
+.visit-toggler {
+    margin-top: 1em;
+}
+
 #additional-reqs {
     border: 2px solid #26262a;
     min-height: 200px;
@@ -385,7 +389,7 @@ form {
 
 #room-selection-form {
     fieldset {
-        margin-bottom: 2em !important;
+        margin-bottom: 1em !important;
 
         div {
             text-align: left;
@@ -411,6 +415,10 @@ form {
         p {
             margin-bottom: 0.5em
         }
+    }
+
+    button[type=submit] {
+        margin-bottom: 1em;
     }
 
     input[type=checkbox], input[type=radio] {
