--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                     <p>
                         To reserve a place, you will need your reader's ticket number and to know how many documents you would like to see.
                         You can then choose an available date to view documents in our reading rooms. You can book a maximum of two visits
-                        per month. See our Terms and Conditions for more details.
+                        per month. See our terms and conditions for more details.
                     </p>
                     <a href="#">More information about how to book and what to expect ></a>
                 </div>
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3>Return to your booking</h3>
-                    <p>You can view you order details for an existing visit using your booking reference number</p>
+                    <p>You can view your order details for an existing visit using your booking reference number</p>
                     <a href="@Url.Action("ReturnToBooking", "Home")">Find your existing visit</a>
                 </div>
             </div>
