Updated some review comments

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <main role="main" class="pb-3">
         <div class="container">
-            @await Html.PartialAsync("Partials/_Breadcrumbs")
+            @*@await Html.PartialAsync("Partials/_Breadcrumbs")*@
             @RenderBody()
         </div>
     </main>
