--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -57,67 +57,65 @@
             </div>
         </section>
 
-        <section class="reader-ticket-form">
-            <div class="row">
-                <div class="col-md-12">
-                    <form action="#" method="GET">
+        <form action="@Url.Action("BookingConfirmation", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="post">
+            <section class="reader-ticket-form">
+                <div class="row">
+                    <div class="col-md-12">
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(Model => Model.BookingReference)
+                        @Html.HiddenFor(Model => Model.SeatType)
                         <fieldset>
                             <legend class="sr-only">Enter reader ticket number</legend>
 
                             <div>
-                                <label for="reader-ticket-number">To reserve your space, enter your reader's ticket number</label>
+                                <label for="ticket">To reserve your space, enter your reader's ticket number</label>
                             </div>
 
-                            <input id="reader-ticket-number" name="reader-ticket-number" type="text" placeholder="Enter ticket number" />
-
-                            <button class="button" type="submit">Check ticket details</button>
+                            <div>
+                                <span id="ticket-error" class="emphasis-error">@Html.ValidationMessage("ticket", new { @class = "emphasis-error" })</span>
+                            </div>
+                            @Html.TextBoxFor(Model => Model.Ticket, new { placeholder = "Enter  ticket number", required = true })
+                            <div>
+                                <a href="/">How to register or renew your reader's ticket</a>
+                            </div>
+                            <div>
+                                <label for="email">To receive the email correspondent, enter your email address</label>
+                            </div>
+                            <div>
+                                <span id="email-error" class="emphasis-error">@Html.ValidationMessage("email", new { @class = "emphasis-error" })</span>
+                            </div>
+                            @Html.TextBoxFor(Model => Model.Email, new { placeholder = "Enter email address" })
                         </fieldset>
-                    </form>
-                    <a href="/">How to register or renew your reader's ticket</a>
-                </div>
-            </div>
-        </section>
-
-        <section id="ticket-details">
-            <div class="row">
-                <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                    <div class="prompt-white">
-                        <p>Your reservation confirmation will be sent to</p>
-                        <p>g*******l@g***l.com</p>
-                        <a href="#">Find out how to change your details</a>
-                        <small>We haven’t displayed your full email address for privacy and security reasons</small>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section class="booking-options">
-            <div class="row">
-                <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                    <form action="@Url.Action("BookingConfirmation", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })">
+            <section class="booking-options">
+                <div class="row">
+                    <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
                         <fieldset id="conditions">
                             <legend class="sr-only">Please accept the following conditions to continue with your order</legend>
 
                             <div>
                                 <label for="terms-conditions">Accept <a href="#">terms and conditions</a></label>
-                                <input id="terms-conditions" name="terms-conditions" type="checkbox" required />
+                                @Html.CheckBoxFor(Model => Model.AcceptTsAndCs, new { id = "terms-conditions", required = true })
                             </div>
                             <div>
                                 <label for="covid-charter">Accept <a href="#">COVID charter</a></label>
-                                <input id="covid-charter" name="covid-charter" type="checkbox" required />
+                                @Html.CheckBoxFor(Model => Model.AcceptCovidCharter, new { id = "covid-charter", required = true })
                             </div>
                         </fieldset>
 
                         <span class="col-md-6 col-sm-6">
-                            <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = @Model.BookingType.ToStringURL() } )">Back</a>
+                            <button type="submit" formnovalidate class="button primary" name="submitbutton" value="cancel">Cancel and choose a different date</button>
                         </span>
 
                         <span class="col-md-6 col-sm-6">
-                            <button type="submit" class="button primary">Reserve your space</button>
+                            <button type="submit" class="button primary" name="submitbutton" value="reserve">Reserve your space</button>
                         </span>
-                    </form>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </form>
     </section>
 </div>
