--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -88,7 +88,7 @@
         <section class="order-form">
             <div class="row">
                 <div class="col-md-12">
-                    <form action="@Url.Action("DocumentOrder", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), bookingReference = @Guid.NewGuid().ToString() } )" method="POST">
+                    <form action="@Url.Action("OrderComplete", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReadingTicket, bookingReference = Model.BookingReference } )" method="POST">
                         @Html.AntiForgeryToken()
                         @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                         {
