Remove sections from CancelBooking view

--- a/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
@@ -10,9 +10,9 @@
 
 <div class="text-center">
 
-    <section class="container">
+    <div class="container">
 
-        <section class="heading align-left">
+        <div class="heading align-left">
             <div class="row">
                 <div class="col-md-12">
                     <p>
@@ -21,9 +21,9 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="cancellation">
+        <div class="cancellation">
             <div class="row">
                 <div class="col-md-12">
                     <form action="@Url.Action("CancellationConfirmation", "Booking")" class="cancellation-form align-left">
@@ -41,7 +41,7 @@
                     </form>
                 </div>
             </div>
-        </section>
+        </div>
 
-    </section>
+    </div>
 </div>
