--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
@@ -1,5 +1,5 @@
 ﻿<header id="header" role="banner">
-    <a tabindex="1" id="skip-to-main-content" href="#breadcrumb-holder">Skip to Main Content</a>
+    <a tabindex="1" id="skip-to-main-content" href="#main-content">Skip to Main Content</a>
     <div class="container">
         <div class="row">
             <div class="col-xs-2 col-sm-5" id="logo-holder">
