--- a/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
@@ -10,9 +10,9 @@
 
 <div class="text-center">
 
-    <section class="container">
+    <div class="container">
 
-        <section class="heading align-left">
+        <div class="heading align-left">
             <div class="row">
                 <div class="col-md-12">
                     <p>
@@ -20,9 +20,9 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="cancellation-details no-margin">
+        <div class="cancellation-details no-margin">
             <div class="row">
                 <div class="col-md-12">
                     <table class="table">
@@ -44,7 +44,7 @@
                     <a class="button primary no-margin" href="@Url.Action("Index", "Home")">Book another visit ></a>
                 </div>
             </div>
-        </section>
+        </div>
 
-    </section>
+    </div>
 </div>
