--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -10,9 +10,9 @@
 
 <div class="text-center">
 
-    <section class="container">
+    <div class="container">
 
-        <section id="progress-bar">
+        <div id="progress-bar">
             <div class="row">
                 <div class="col-md-12">
                     <ol>
@@ -24,9 +24,9 @@
                     </ol>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="heading">
+        <div class="heading">
             <div class="row">
                 <div class="col-md-12">
                     <div class="prompt-white">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
         <section class="booking-details">
             <div class="row">
@@ -106,7 +106,7 @@
 
                 @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                 {
-                    <div class="col-md-6">
+                    <section class="col-md-6">
                         <h3>Your reserve documents</h3>
                         <ol class="document-list">
                             <li>
@@ -122,11 +122,11 @@
                                 <p>Kenya land transfer programme: Captain F L Jones…</p>
                             </li>
                         </ol>
-                    </div>
+                    </section>
                 }
 
             </div>
         </section>
         <a class="button" href="#">Print this order</a>
-    </section>
+    </div>
 </div>
