Update Index view
This changes the HTML structure and changes a heading level

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
 
 <div id="home" class="text-center">
 
-    <section class="container">
+    <div class="container">
 
-        <section class="heading-text">
+        <div class="heading-text">
             <div class="row">
                 <div class="col-md-12">
                     <p>
@@ -20,9 +20,9 @@
                     <a href="#">More information about how to book and what to expect ></a>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="prompt-white">
+        <div class="prompt-white">
             <div class="row">
                 <div class="col-md-12">
                     <h2>Before you book</h2>
@@ -30,60 +30,58 @@
                     <a href="#">Register or renew a reader’s ticket</a>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section>
-            <div class="row">
-                <section class="order-option">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="card">
-                            <div class="order-option-heading">
-                                <h2>Book a standard visit</h2>
-                                <p class="bold-text">@Model.StandardBookingAvailable.ToString("N0") spaces available</p>
-                            </div>
-
-                            <ul>
-                                <li>Documents can be from <span class="bold-text">multiple series</span>, e.g. ADM 22 and C 142</li>
-                                <li>1-day visit</li>
-                                <li>Up to 12 documents</li>
-                                <li>Computer access available</li>
-                            </ul>
-
-                            <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = "standard-order-visit" })">Select a date</a>
+        <div class="row">
+            <section class="order-option">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="card">
+                        <div class="order-option-heading">
+                            <h2>Book a standard visit</h2>
+                            <p class="bold-text">@Model.StandardBookingAvailable.ToString("N0") spaces available</p>
                         </div>
+
+                        <ul>
+                            <li>Documents can be from <span class="bold-text">multiple series</span>, e.g. ADM 22 and C 142</li>
+                            <li>1-day visit</li>
+                            <li>Up to 12 documents</li>
+                            <li>Computer access available</li>
+                        </ul>
+
+                        <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = "standard-order-visit" })">Select a date</a>
                     </div>
-                </section>
-
-                <section class="order-option">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="card">
-                            <div class="order-option-heading">
-                                <h2>Book a bulk order visit</h2>
-                                <p class="bold-text">@Model.BulkBookingsAvailable.ToString("N0") spaces available</p>
-                            </div>
-
-                            <ul>
-                                <li>Documents have to be from <span class="bold-text">one series</span>, e.g. ADM 22</li>
-                                <li>2-day visit</li>
-                                <li>Between 20 - 40 documents</li>
-                                <li>Computer access available</li>
-                            </ul>
-
-                            <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = "bulk-order-visit" })">Select a date</a>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </section>
-
-        <section class="prompt">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>Return to your booking</h3>
-                    <p>You can view your order details for an existing visit using your booking reference number</p>
-                    <a href="@Url.Action("ReturnToBooking", "Home")">Find your existing visit</a>
                 </div>
+            </section>
+
+            <section class="order-option">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="card">
+                        <div class="order-option-heading">
+                            <h2>Book a bulk order visit</h2>
+                            <p class="bold-text">@Model.BulkBookingsAvailable.ToString("N0") spaces available</p>
+                        </div>
+
+                        <ul>
+                            <li>Documents have to be from <span class="bold-text">one series</span>, e.g. ADM 22</li>
+                            <li>2-day visit</li>
+                            <li>Between 20 - 40 documents</li>
+                            <li>Computer access available</li>
+                        </ul>
+
+                        <a class="button primary" href="@Url.Action("Availability", "Home", new { bookingType = "bulk-order-visit" })">Select a date</a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <section class="prompt">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Return to your booking</h2>
+                <p>You can view your order details for an existing visit using your booking reference number</p>
+                <a href="@Url.Action("ReturnToBooking", "Home")">Find your existing visit</a>
             </div>
-        </section>
+        </div>
     </section>
 </div>
