Update SecureBooking view

--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Secure booking";
 }
 
-<h1 class="display-4">2. Enter your reader's ticket</h1>
+<h1 class="display-4">2. Enter your reader's tickets</h1>
 
 <div class="text-center">
 
